k8s/shared/deployment-hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
  namespace: shared
spec:
  selector:
    matchLabels:
      greeting: hello
      version: one
  replicas: 3
  template:
    metadata:
      labels:
        greeting: hello
        version: one
    spec:
      containers:
        - name: hello-app-1
          image: "us-docker.pkg.dev/google-samples/containers/gke/hello-app:1.0"
          resources:
            requests:
              cpu: 125m
              memory: 125Mi
            limits:
              cpu: 500m
              memory: 500Mi
