k8s/shared/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: shared
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "meatcloud"
spec:
  # defaultBackend:
  #   service:
  #     name: argocd
  #     port:
  #       number: 8080
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: hello-world
                port:
                  number: 60000
